# corvax-sla-tracker

./: .env  .gitignore  README.md  certbot.Dockerfile  docker-compose.yaml  pyproject.toml  scrapper.Dockerfile  web.Dockerfile
compose/shared-volumes/certbot/: generate-certificate.sh
compose/shared-volumes/nginx/: nginx.conf
kube/: ddns-cron.yaml  web.yaml
scrapper/: .env.empty  __init__.py  docker-loop.py  main.py
web/: __init__.py  main.py
web/templates/: index.html
