[project]
name = "corvax-sla-tracker"
version = "0.1.0"
description = ""

authors = [
    {name = "user",email = "localhost@localhost.home"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "influxdb-client (>=1.48.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyping (>=0.0.6,<0.0.7)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)",
]

[tool.poetry]
packages = [
    {include="scrapper"},
    {include="web"}
]

[tool.poetry.scripts]
fetch="scrapper:fetch_"
run_app="web:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
