[tool.poetry]
name = "corvax-sla-tracker"
version = "0.1.0"
description = "Best way to track server sla of \"СЕТЬ КОРВАКС\""
authors = ["Jailedfish"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
influxdb-client = "^1.48.0"
ago = "^0.1.0"
requests = "^2.32.3"
flask = "^3.1.0"
dotenv = "^0.9.9"
aiohttp = "^3.11.16"
pkginfo = "^1.12.1.2"
pyping-py3 = "0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"